# typo3-log-viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build-linux.sh  build.sh  bump-version.sh  check-setup.sh  plan.md  release-all.sh  release.sh  test.sh  update-formula.sh
Formula/: typo3-log-viewer.rb
src/: clipboard.rs  loader.rs  main.rs  model.rs  parser.rs  updater.rs
src/ui/: app.rs  mod.rs
