[package]
name = "typo3-log-viewer"
version = "0.2.0"
edition = "2021"
description = "Interactive viewer for TYPO3 log files"
authors = ["RTL"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Date/Time parsing
chrono = "0.4"

# Regex for log parsing
regex = "1.10"

# Lazy static for compiled regex
once_cell = "1.19"

# JSON formatting
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
